Fix image not fitting to div

--- a/styles/global.css
+++ b/styles/global.css
@@ -188,3 +188,8 @@ body {
 .pad{
     height: 50px;
 }
+
+.fit {
+    max-width: 100%;
+    max-height: 100%;
+}
